fix overflow clipping of sunburst

--- a/src/layouts/AppLayout.module.css
+++ b/src/layouts/AppLayout.module.css
@@ -3,6 +3,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 .error {
